--- a/uiFront/src/assets/main.css
+++ b/uiFront/src/assets/main.css
@@ -24,3 +24,46 @@ img {
     max-width: none !important;
   }
 }
+
+.btn-primary {
+  align-items: right;
+  background-color: #6d997a;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  padding: 10px 20px;
+  text-align: center;
+}
+
+.btn-primary:hover {
+  background-color: #42282c;
+}
+
+.btn-primary:hover, .btn:focus, .btn:active {
+  background-color: #42282c; 
+}
+
+.btn-secondary {
+    background-color: #42282c; 
+    border-color: #42282c;
+    color: white; 
+    display: inline-flex; 
+    align-items: center; 
+    padding: 10px 20px; 
+    margin-left: 10px; 
+    border: none; 
+    border-radius: 4px; 
+    cursor: pointer; 
+    font-size: 16px; 
+    text-decoration: none; 
+}
+
+
+.btn-secondary:hover {
+  background-color: #50373b; 
+}
+
+.btn-secondary i {
+    margin-right: 8px; 
+}
